Some comment lines translated to English

--- a/Bitguard/Views/Home/Dashboard.cshtml
+++ b/Bitguard/Views/Home/Dashboard.cshtml
@@ -2,6 +2,7 @@
 @model DashboardModel
 @{
 	ViewData["Title"] = L.Get("dashTitle");
+    //IM SORRY FOR THIS MESS
 }
 @if (Model.selectedServerIndex != -1)
     {
